Fixed the positioning, spacing, and borders

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ p {
 }
 
 .navigation__item {
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1rem;
 }
 
 .navigation__link {
@@ -124,6 +124,7 @@ p {
   background-color: #c05326;
   border: none;
   border-radius: 0.3rem;
+  padding: 0.5rem;
 }
 
 .volunteer{
@@ -131,15 +132,20 @@ p {
   background-color: white;
   border: none;
   border-radius: 0.3rem;
+  padding: 0.5rem;
 }
 
 /* hero */
 
 .hero {
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: flex-start; */
   background-image: url("/images/header-bike.jpg");
   background-color: var(--grey-light);
-  padding: 10%;
+  padding: 10% 5%;
   margin-bottom: 5%;
+  color: #fff;
 }
 
 .hero h1 {
@@ -176,11 +182,21 @@ p {
   background: var(--orange-dark);
 }
 
+.learn_more{
+  display: flex;
+  justify-content: space-between;
+}
+
+.learn_more > article{
+  width: 44.5%;
+}
 
 /* Article */
 
 .article {
   margin-bottom: 1rem;
+  border: 0.1em lightgrey solid;
+  padding: 2%;
 }
 
 .article__title {
@@ -235,6 +251,18 @@ p {
   display: flex;
   flex-direction: column;
   min-width: 350px;
+}
+
+aside > .article{
+  display: flex;
+}
+
+.article__content{
+  padding: 3% 6%;
+}
+
+aside > a{
+  text-align: right;
 }
 
 /* Footer */
